--- a/registration-form.html
+++ b/registration-form.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/form.css">
     <title>Race Registration</title>
 </head>
 
 <body>
-    <h1>Race Registration!</h1>
+    <h1>Race Registration</h1>
     <form action="/dummy">
+        <p id="heading">REGISTER</p>
         <p>
             <label for="first">First Name</label>
             <input name="firstname" type="text" id="first" required>
